fix swap gap

--- a/src/components/BuyInputSection/BuyInputSection.scss
+++ b/src/components/BuyInputSection/BuyInputSection.scss
@@ -54,6 +54,7 @@
       display: flex;
       align-items: center;
       margin-left: 1rem;
+      gap: 0.5rem;
     }
 
     &-top {
